--- a/gb/17/11/3/n9802779.md
+++ b/gb/17/11/3/n9802779.md
@@ -1,12 +1,12 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/vvuthu3265/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/vvuthu3265/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/vvuthu3265/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/vvuthu3265/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/vvuthu3265/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/vvuthu3265/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/vvuthu3265/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/vvuthu3265/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/vvuthu3265/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/vvuthu3265/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/vvuthu3265/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/vvuthu3265/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/vvuthu3265/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/vvuthu3265/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/vvuthu3265/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/vvuthu3265/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/vvuthu3265/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/vvuthu3265/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/vvuthu3265/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/vvuthu3265/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/vvuthu3265/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/vvuthu3265/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/vvuthu3265/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/vvuthu3265/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/vvuthu3265/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/vvuthu3265/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/vvuthu3265/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/vvuthu3265/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/vvuthu3265/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/vvuthu3265/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/vvuthu3265/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/vvuthu3265/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/vvuthu3265/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/vvuthu3265/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/vvuthu3265/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/vvuthu3265/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/vvuthu3265/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/vvuthu3265/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/vvuthu3265/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/vvuthu3265/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/vvuthu3265/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/vvuthu3265/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/vvuthu3265/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/vvuthu3265/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/vvuthu3265/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/vvuthu3265/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/vvuthu3265/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>学习型城市 台教部：为多元终身学习铺路</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2017年11月03日讯】（大纪元记者江禹婵台北报导）为促进<ahref="https://github.com/vvuthu3265/djy/blob/master/gb/tag/%E7%BB%88%E8%BA%AB%E5%AD%A6%E4%B9%A0.md#1">终身学习</a>的发展，并开创<ahref="https://github.com/vvuthu3265/djy/blob/master/gb/tag/%E5%AD%A6%E4%B9%A0%E5%9E%8B%E5%9F%8E%E5%B8%82.md#1">学习型城市</a>的新未来，教育部政务次长蔡清华表示，教育部自民国104年（2015年）起，结合地方政府逐步推动学习型城市计划，以地方发展特色为基础，与在地大学合作，联系及发展公、私部门伙伴关系，增进学习机会与风气，建构学习型城市。</p>
-<p>教育部3日在国立公共资讯图书馆办理“2017全民<ahref="https://github.com/vvuthu3265/djy/blob/master/gb/tag/%E7%BB%88%E8%BA%AB%E5%AD%A6%E4%B9%A0.md#1">终身学习</a>论坛”，以“<ahref="https://github.com/vvuthu3265/djy/blob/master/gb/tag/%E5%AD%A6%E4%B9%A0%E5%9E%8B%E5%9F%8E%E5%B8%82.md#1">学习型城市</a>的前瞻与深耕”为主题，邀请专家学者专题演讲与对谈，并透过地方政府及计划团队分享推动经验。</p>
+<p>【大纪元2017年11月03日讯】（大纪元记者江禹婵台北报导）为促进<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%BB%88%E8%BA%AB%E5%AD%A6%E4%B9%A0.md#1">终身学习</a>的发展，并开创<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%AD%A6%E4%B9%A0%E5%9E%8B%E5%9F%8E%E5%B8%82.md#1">学习型城市</a>的新未来，教育部政务次长蔡清华表示，教育部自民国104年（2015年）起，结合地方政府逐步推动学习型城市计划，以地方发展特色为基础，与在地大学合作，联系及发展公、私部门伙伴关系，增进学习机会与风气，建构学习型城市。</p>
+<p>教育部3日在国立公共资讯图书馆办理“2017全民<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%BB%88%E8%BA%AB%E5%AD%A6%E4%B9%A0.md#1">终身学习</a>论坛”，以“<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%AD%A6%E4%B9%A0%E5%9E%8B%E5%9F%8E%E5%B8%82.md#1">学习型城市</a>的前瞻与深耕”为主题，邀请专家学者专题演讲与对谈，并透过地方政府及计划团队分享推动经验。</p>
 <p>本次论坛分成4个主题。首先邀请大学校长探讨大学社会责任与学习型城市的发展；其次，从高龄化社会与生活健康产业的现况与人力资源发展的角度，认识学习型城市的功能与趋势，描绘学习型城市的崭新观点；探讨学习型城市的在地连结与永续发展，讨论在地的独特性与差异性，发展学习型城市的深耕模式；最后，邀请学习型城市的10个续办县市政府及其计划团队，分享实践经验与推展历程。</p>
 <p>教育部表示，学习型城市的建构是一条长久的道路，需由中央与地方携手合作，不断推进全民学习、主动学习、组织学习，型塑终身学习文化，进而创造城市新价值。◇</p>
 <p>责任编辑：芸清</p>
@@ -15,48 +15,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/vvuthu3265/djy/blob/master/gb/10/11/17/n3087625.md#1">阅读新竹 共创学习城市</a></li>
-<li><a href="https://github.com/vvuthu3265/djy/blob/master/gb/10/11/25/n3095009.md#1">社区大学全国促进会：推动终身学习城市</a></li>
-<li><a href="https://github.com/vvuthu3265/djy/blob/master/gb/10/12/31/n3129022.md#1">乐龄学习阿嬷  终身学习典范</a></li>
-<li><a href="https://github.com/vvuthu3265/djy/blob/master/gb/11/6/10/n3282186.md#1">北市整合平台  推学习型城市网</a></li>
-<li><a href="https://github.com/vvuthu3265/djy/blob/master/gb/20/12/25/n12644807.md#1">女大生命案 长荣大学校长、学务长、总务长辞职</a></li>
-<li><a href="https://github.com/vvuthu3265/djy/blob/master/gb/20/12/24/n12642817.md#1">台教团批“私校退场条例” 百亿补助恐沦私产</a></li>
-<li><a href="https://github.com/vvuthu3265/djy/blob/master/gb/20/12/23/n12640469.md#1">华艺审批著作权争议 台教部：跨部会讨论</a></li>
-<li><a href="https://github.com/vvuthu3265/djy/blob/master/gb/20/12/19/n12631463.md#1">台故宫南院人气国宝展 唐伯虎画作不容错失</a></li>
-<li><a href="https://github.com/vvuthu3265/djy/blob/master/gb/20/12/18/n12630158.md#1">法总统马克宏确诊 台外交部表达慰问</a></li>
-<li><a href="https://github.com/vvuthu3265/djy/blob/master/gb/20/12/16/n12625136.md#1">台湾中小学老旧校舍 年底前拆除246栋</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/17/n3087625.md#1">阅读新竹 共创学习城市</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/25/n3095009.md#1">社区大学全国促进会：推动终身学习城市</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/12/31/n3129022.md#1">乐龄学习阿嬷  终身学习典范</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/10/n3282186.md#1">北市整合平台  推学习型城市网</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613941.md#1">台学测数A满级分仅789人 不到1%</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13611331.md#1">非正规教育课程学费补助 3月15日截止受理</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13611334.md#1">大学学测成绩今公布</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605061.md#1">台招联会拍板分科测验级距 维持前1%方案</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13604849.md#1">疫情改变教学型态 台师大开设数位硕士在职专班</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/24/n13602371.md#1">金钟奖大变革 节目与戏剧颁奖分2天举办</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/31/n11758706.md#1" target="_blank">张林：共军在朝鲜战争中丧生两百万（1）</a></li><li><a href="https://github.com/vvuthu3265/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/10/7/21/n2972092.md#1" target="_blank">修炼者的心声：请支持正义良知  选择美好未来</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/20/n10158455.md#1" target="_blank">林辉：为何“六九届”学生少有成功人士？</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/28/n11352168.md#1" target="_blank">前大陆公安：中共镇压法轮功早有预谋</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/vvuthu3265/djy/blob/master/gb/20/12/23/n12639978.md#1">放眼2021年 英预言家谈川普与世界大事</a></li>
-<li><a href="https://github.com/vvuthu3265/djy/blob/master/gb/20/12/20/n12633276.md#1">木星土星大合相 《圣经》中圣诞之星现身？</a></li>
-<li><a href="https://github.com/vvuthu3265/djy/blob/master/gb/20/12/22/n12638393.md#1">不丹王太后梦前世 故地重游感轮回</a></li>
-<li><a href="https://github.com/vvuthu3265/djy/blob/master/gb/20/12/23/n12639398.md#1">4岁女童讲述前世记忆 吓坏妈妈</a></li>
-<li><a href="https://github.com/vvuthu3265/djy/blob/master/gb/20/12/22/n12637662.md#1">濒死男子到另一个世界 获知生命的意义</a></li>
-<li><a href="https://github.com/vvuthu3265/djy/blob/master/gb/20/12/25/n12645676.md#1">车评：阳光动力 2020 Hyundai Sonata Hybrid Ltd</a></li>
-<li><a href="https://github.com/vvuthu3265/djy/blob/master/gb/20/12/24/n12643382.md#1">【财商天下】北上广深停电 背后算盘或惊人</a></li>
-<li><a href="https://github.com/vvuthu3265/djy/blob/master/gb/20/12/24/n12643687.md#1">【新闻看点】习近平反垄断 马云成第一标靶？</a></li>
-<li><a href="https://github.com/vvuthu3265/djy/blob/master/gb/20/12/24/n12643078.md#1">一颗超级陨石坠入青海 中国会出大事吗？</a></li>
-<li><a href="https://github.com/vvuthu3265/djy/blob/master/gb/20/12/24/n12643382.md#1">【财商天下】北上广深停电 背后算盘或惊人</a></li>
-<li><a href="https://github.com/vvuthu3265/djy/blob/master/gb/20/12/24/n12642158.md#1">台湾陆委会证实 向华强已提依亲居留申请</a></li>
-<li><a href="https://github.com/vvuthu3265/djy/blob/master/gb/20/12/23/n12640869.md#1">六年情断 周迅与高圣远宣布离婚</a></li>
-<li><a href="https://github.com/vvuthu3265/djy/blob/master/gb/20/12/24/n12642145.md#1">杜汶泽谈亲共艺人 林昶佐直播吸30万人</a></li>
-<li><a href="https://github.com/vvuthu3265/djy/blob/master/gb/20/12/25/n12643860.md#1">62岁冯小刚近照很显憔悴 头发斑秃面色发白</a></li>
-<li><a href="https://github.com/vvuthu3265/djy/blob/master/gb/20/12/24/n12641430.md#1">自曝不愿上综艺节目原因 高圆圆获网友称赞</a></li>
-<li><a href="https://github.com/vvuthu3265/djy/blob/master/gb/20/12/25/n12645462.md#1">对参赛者发犀利三连问 章子怡获称狠人评委</a></li>
-<li><a href="https://github.com/vvuthu3265/djy/blob/master/gb/20/12/23/n12639978.md#1">放眼2021年 英预言家谈川普与世界大事</a></li>
-<li><a href="https://github.com/vvuthu3265/djy/blob/master/gb/20/12/23/n12639185.md#1">小腹凸、腰酸可能是骨盆前倾 2动作“瘦”下来</a></li>
-<li><a href="https://github.com/vvuthu3265/djy/blob/master/gb/20/12/25/n12644367.md#1">被陌生人喂食 山西流浪狗喜极而泣</a></li>
-<li><a href="https://github.com/vvuthu3265/djy/blob/master/gb/20/12/23/n12640899.md#1">敲敲大脑防失智！中医这样做健脑 告别记忆力衰退</a></li>
-<li><a href="https://github.com/vvuthu3265/djy/blob/master/gb/20/12/23/n12639785.md#1">该用电动牙刷吗？手动跟电动牙刷大比拼！</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613897.md#1">【十字路口】锁链女遭拐卖凌虐 幕后大黑手曝光？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613669.md#1">【马克时空】乌获欧盟战机 全面制裁砸晕俄罗斯</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/vvuthu3265/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/vvuthu3265/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/11/3/n9802779.htm">学习型城市 台教部：为多元终身学习铺路</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/11/3/n9802779.htm">学习型城市 台教部：为多元终身学习铺路</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/vvuthu3265/djy/blob/master/gb/17/11/3/n9802779.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/vvuthu3265/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vvuthu3265/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/vvuthu3265/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/vvuthu3265/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/vvuthu3265/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vvuthu3265/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/vvuthu3265/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vvuthu3265/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/vvuthu3265/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vvuthu3265/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/vvuthu3265/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vvuthu3265/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/vvuthu3265/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vvuthu3265/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/vvuthu3265/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vvuthu3265/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/vvuthu3265/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vvuthu3265/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/vvuthu3265/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vvuthu3265/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/vvuthu3265/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vvuthu3265/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/vvuthu3265/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vvuthu3265/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/vvuthu3265/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vvuthu3265/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/vvuthu3265/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vvuthu3265/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/vvuthu3265/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vvuthu3265/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/vvuthu3265/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vvuthu3265/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/vvuthu3265/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vvuthu3265/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/vvuthu3265/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vvuthu3265/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/vvuthu3265/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vvuthu3265/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/vvuthu3265/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vvuthu3265/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/vvuthu3265/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vvuthu3265/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/vvuthu3265/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vvuthu3265/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/vvuthu3265/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vvuthu3265/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/vvuthu3265/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vvuthu3265/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/17/11/3/n9802779.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
